@@ -26,6 +26,7 @@ import org.jkiss.dbeaver.model.sql.semantics.model.SQLQueryNodeModelVisitor;
 import org.jkiss.dbeaver.model.sql.semantics.model.expressions.SQLQueryValueExpression;
 import org.jkiss.dbeaver.model.stm.STMTreeNode;
 
+import java.util.Collections;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -35,12 +36,15 @@ import java.util.List;
 public class SQLQueryRowsTableValueModel extends SQLQueryRowsSourceModel {
     @NotNull
     private final List<SQLQueryValueExpression> values;
+    private final boolean isIncomplete;
     
     public SQLQueryRowsTableValueModel(
         @NotNull STMTreeNode syntaxNode,
-        @NotNull List<SQLQueryValueExpression> values) {
+        @NotNull List<SQLQueryValueExpression> values,
+        boolean isIncomplete) {
         super(syntaxNode);
         this.values = values;
+        this.isIncomplete = isIncomplete;
     }
 
     @NotNull
@@ -59,7 +63,13 @@ public class SQLQueryRowsTableValueModel extends SQLQueryRowsSourceModel {
             value.propagateContext(context, statistics);
             resultColumns.addLast(new SQLQueryResultColumn(resultColumns.size(), new SQLQuerySymbol("?"), this, null, null, SQLQueryExprType.UNKNOWN));
         }
-        return context.hideSources().overrideResultTuple(List.copyOf(resultColumns));
+        context = context.hideSources().overrideResultTuple(this, List.copyOf(resultColumns), Collections.emptyList());
+
+        if (this.isIncomplete) {
+            context = context.markHasUnresolvedSource();
+        }
+
+        return context;
     }
 
     @Override
